Parse -Xlog:gc variants for compatibility
Issue https://github.com/eclipse/openj9-docs/issues/671

Signed-off-by: Peter Shipton <Peter_Shipton@ca.ibm.com>